# 2023_1_Tehnopark

./: .gitignore  CMakeLists.txt  README.md  example.txt  out  resources  sas.css  taskmaster.C  templates.xml
TaskMaster/: CMakeLists.txt
TaskMaster/include/Board/: BoardController.hpp  BoardHandlerInterface.hpp  BoardRepo.hpp  BoardRepoInterface.hpp
TaskMaster/include/DbDriver/: DbDriver.hpp  DbDriverInterface.hpp
TaskMaster/include/MainPadge/: MainPadgeController.hpp  MainPadgeHandlerInterface.hpp
TaskMaster/include/Project/: ProjectController.hpp  ProjectHandlerInterface.hpp  ProjectRepo.hpp  ProjectRepoInterface.hpp
TaskMaster/include/Serialization/: Serialization.hpp
TaskMaster/include/Task/: TaskController.hpp  TaskHandlerInterface.hpp  TaskRepo.hpp  TaskRepoInterface.hpp
TaskMaster/include/User/: UserController.hpp  UserHandlerInterface.hpp  UserRepo.hpp  UserRepoInterface.hpp
TaskMaster/include/models/: Board.hpp  Project.hpp  Task.hpp  User.hpp
TaskMaster/models/: Board.cpp  Board.hpp  Project.cpp  Project.hpp  Task.cpp  Task.hpp  User.cpp  User.hpp
TaskMaster/src/Board/: BoardController.cpp  BoardRepo.cpp
TaskMaster/src/DbDriver/: DbDriver.cpp
TaskMaster/src/MainPadge/: MainPadgeController.cpp
TaskMaster/src/Project/: ProjectController.cpp  ProjectRepo.cpp
TaskMaster/src/Serialization/: Serialization.cpp
TaskMaster/src/Task/: TaskController.cpp  TaskRepo.cpp
TaskMaster/src/User/: UserController.cpp  UserRepo.cpp
TaskMaster/src/models/: Board.cpp  Project.cpp  Task.cpp  User.cpp
TaskMaster/tests/: CMakeLists.txt  DbDriverMock.hpp
TaskMaster/tests/Board/: BoardControllerTest.cpp  BoardRepoTest.cpp
TaskMaster/tests/Project/: ProjectControllerTest.cpp  ProjectRepoTest.cpp
TaskMaster/tests/Task/: TaskControllerTest.cpp  TaskRepoTest.cpp
TaskMaster/tests/User/: UserRepoTest.cpp
css/: bootstrap.css  style.css  wt.css
model/include/: AuthUser.h  Session.h
model/src/: AuthUser.C  Session.C
src/: main.cpp
testpqxx/: main  main.cpp
view/include/: BoardListItem.h  BoardPage.h  Errors.h  ImageWidget.h  LoginWidget.h  MainPage.h  MainView.h  MyTasksPage.h  ProjectListItem.h  ProjectPage.h  TaskListItem.h  TasksContainer.h
view/src/: BoardListItem.C  BoardPage.C  Errors.C  ImageWidget.C  LoginWidget.C  MainPage.C  MainView.C  MyTasksPage.C  ProjectListItem.C  ProjectPage.C  TaskListItem.C  TasksContainer.C
